Suit img max height to prevent squishing + better social icons

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -357,7 +357,7 @@ app {
     float: left;
     width: 33.33%;
     padding-left: 2rem;
-    padding-right: 0.5rem;
+    padding-right: 1rem;
     padding-top: 2rem;
     order: 2;
 }
